[package]
name = "code-graph"
version = "0.0.1"
license = "MIT"
readme = "README.md"
edition = "2021"
repository = "https://github.com/feint123/code-graph"
homepage = "https://github.com/feint123"
description = "An egui app that can display code graphics and find all references"
keywords = ["egui", "ast", "coding"]
categories = ["GUI"]

[[bin]]
name = "code-graph"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.22.6"
tree-sitter-rust = "0.21.2"
tree-sitter-java = "0.21.0"
tree-sitter-c = "0.21.4"
egui = "0.28.1"
egui_extras = "0.28.1"
font-kit = "0.14.2"
eframe = { version = "0.28.1", features = ["persistence"] }
rfd = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
