[package]
name = "code-graph"
version = "0.0.3"
license = "MIT"
readme = "README.md"
edition = "2021"
repository = "https://github.com/feint123/code-graph"
homepage = "https://github.com/feint123"
description = "An egui app that can display code graphics and find all references"
keywords = ["egui", "ast", "coding"]
categories = ["gui", "command-line-utilities"]

[[bin]]
name = "code-graph"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.22.6"
tree-sitter-rust = "0.21.2"
tree-sitter-java = "0.21.0"
tree-sitter-c = "0.21.4"
tree-sitter-javascript = "0.21.4"
egui = "0.28.1"
egui_extras = { version = "0.28.1", features = ["all_loaders"] }
font-kit = "0.14.2"
eframe = { version = "0.28.1", features = ["persistence"] }
rfd = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5.0"
image = { version = "0.25.2", features = ["png"] }

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
